# CanonMavlinkBridge

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  EDSDK_API_EN_corrected.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  hardware_compatibility.md  performance.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
config/: config.yaml
docs/: BUILD.md
scripts/: build.sh  canon-mavlink-bridge.service.in  setup_edsdk.sh  setup_github.md
src/: main.cpp
src/bridge/: bridge_core.cpp  command_mapper.cpp  event_processor.cpp  property_mapper.cpp
src/canon/: canon_camera.cpp  canon_errors.cpp
src/mavlink/: camera_protocol.cpp  ftp_server.cpp  mavlink_interface.cpp
src/utils/: config.cpp  file_utils.cpp  logger.cpp
tests/: CMakeLists.txt
tests/hardware/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
