# Hardware Tests CMakeLists.txt

# Placeholder for hardware tests - add test files as they are created
# These tests require actual Canon camera hardware
# Example:
# add_executable(test_camera_hardware test_camera_hardware.cpp)
# target_link_libraries(test_camera_hardware GTest::gtest GTest::gtest_main)
# add_test(NAME test_camera_hardware COMMAND test_camera_hardware)

message(STATUS "Hardware tests directory configured (no tests implemented yet)")