# Integration Tests CMakeLists.txt

# Placeholder for integration tests - add test files as they are created
# Example:
# add_executable(test_bridge_integration test_bridge_integration.cpp)
# target_link_libraries(test_bridge_integration GTest::gtest GTest::gtest_main)
# add_test(NAME test_bridge_integration COMMAND test_bridge_integration)

message(STATUS "Integration tests directory configured (no tests implemented yet)")