# Unit Tests CMakeLists.txt

# Placeholder for unit tests - add test files as they are created
# Example:
# add_executable(test_canon_camera test_canon_camera.cpp)
# target_link_libraries(test_canon_camera GTest::gtest GTest::gtest_main)
# add_test(NAME test_canon_camera COMMAND test_canon_camera)

message(STATUS "Unit tests directory configured (no tests implemented yet)")